[package]
name = "live_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [] }
libp2p = { version = "0.41", default-features = true, features = ["ping"] }
pnet = { version = "0.29", default-features = false, features = [] }
redis = { version = "0.21", default-features = false, features = ["aio", "tokio-comp"] }
structopt = { version = "0.3", default-features = false, features = [] }
tokio = { version = "1", default-features = true, features = ["full"] }
zeroize = { version = "1.5.0", features = ["zeroize_derive"] }