[package]
name = "live_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "*"
futures-util = { version = "0.3", default-features = false, features = [] }
ipfs-bitswap = { git = "https://github.com/matthiasbeyer/rust-ipfs.git", branch = "update-libp2p-bitswap"}
libp2p = { version = "0.41", default-features = false, features = ["websocket", "mplex", "yamux", "noise", "kad", "gossipsub", "tcp-tokio", "dns-tokio"] }
pnet = { version = "0.29", default-features = false, features = [] }
rand = { version = "0.8.4", default-features = false, features = [] }
rand_xoshiro = "0.6.0"
redis = { version = "0.21", default-features = false, features = ["aio", "tokio-comp"] }
structopt = { version = "0.3", default-features = false, features = [] }
tokio = { version = "^1", default-features = false, features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = "0.1"
zeroize = { version = "1.5.0", features = ["zeroize_derive"] }